--- a/static/index.html
+++ b/static/index.html
@@ -55,6 +55,8 @@
 
     <button id="refresh">Update.</button>
 
+    <button id="staples">Show me staples instead</button>
+
 </div>
 
 <div class="filter">
@@ -112,6 +114,17 @@
             <th>Commander(s)</th>
             <th>%<br/>Complete</th>
             <th colspan="2">Price</th>
+        </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <table id="staplesTable" class="decksList">
+        <thead>
+        <tr class="header">
+            <th>#</th>
+            <th>Card</th>
+            <th>(Count)</th>
         </tr>
         </thead>
         <tbody></tbody>
